# scamp

./: .build.yml  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  MANIFEST  MANIFEST.in  README.md  __init__.py  buildDocs  defaultSoundfonts.txt  fluidsynth.py  interval.py  measures_beats_notes.py  playcorder.py  pyproject.toml  recording_to_xml.py  setup.cfg  setup.py  submodule_push.sh
.github/workflows/: build-wheels.yml
bugs/: hanging_fork.py
docs/: audit_docstring_coverage.py  conf.py  index.rst  makePackageRSTs.py
docs/narrative/: easy_setup.rst  easy_setup_macos.rst  easy_setup_windows.rst  experienced_setup.rst  forum.rst  kadenze.rst  music.rst  note_properties.rst  support.rst  tutorial_videos.rst  type_aliases.rst  youtube.rst
docs/scamp/: scamp.playback_adjustments.PlaybackAdjustmentsDictionary.rst
examples/: adjustment_test.py  chords_example.py  clock_examples.py  ensemble.py  ensembleExample.py  envelope_examples.py  glissando_test.py  playcorder_simple2.py  playcorder_simple3.py  quantization.py  score_testing.py  split_notes.py
examples/AssortedHaphazard/: GuitarArpeggios.py  NotationVSPerformance.py  adjustment_test.py  bananaphone.py  bunchStuff.py  chords_example.py  conway.py  double_score.py  ensembleExample.py  fifteen_sixteen.py  glissTest2.py  glissando_test.py  indispensibility.py  karlclock.py  karlclock_interactive.py  key_clocks.py  key_sig.py  keyboard_input_with_notation.py  load_and_play_performance.py  load_performance_and_export_midi.py  metric_phase.py  midi_channel_manager.py  midi_export.mid  midi_in_out.py  multiple_score_example.py  octava.py  qt_interactive.py  quantization.py  repeated_notes.py  save_performance.py  tempo_test.py  ticker_test.py  voice-leading.py  voice-leading_weird.py
examples/Reconstructions/: piano_phase.py
examples/Tutorial/: 01_hello_world.py  03_blocking_false.py  04_random_durations_and_rests.py  05_notation.py  06_time_signature.py  10_multi_tempo.py  11_record_on_clock.py  12_envelopes_basic.py  13_envelopes_advanced.py  14_gliss_from_envelope.py  15_envelope_shorthand.py  16_start_and_end_note.py  17_volume_envelope.py  18_microtonal.py  19_playback_implementations.py  1_hello_world.py  20_note_properties.py  21_pitch_spelling.py  22_osc_to_supercollider.py  22_osc_to_supercollider.scd  22_staff_text.py  23_osc_to_supercollider.py  23_osc_to_supercollider.scd  23_special_notations.py  23_supercollider_made_easy.py  24_MIDI_in_out.py  24_osc_to_supercollider.py  24_supercollider_made_easy.py  25_MIDI_in_out.py  25_keyboard_input.py  25_mouse_input.py  26_keyboard_input.py  26_mouse_input.py  27a_osc_listener.py  27b_osc_sender.py  28a_osc_listener.py  28b_osc_sender.py  29_spanners.py  2_tempo_change.py  3_blocking_false.py  (+11 more)
examples/Workshop/: fluidsynthTest.py
examples/marc/: barlicity.py  lunar_trajectories.py
examples/osc/: OSCListenerPython.scd  osc_instrument_example.py
junk/: playcorderOld.py  splitting_param_segment_adds.py
misc/bugs/: midwait.py  piano_phase_bug.py  slightly off arrival.py
misc/junk/: abjad_experiments.py  adjust_beat_at_time.py  checkin.py  easy_setup_linux.rst  easy_setup_macos.rst  easy_setup_windows.rst  instruments2.py  instruments2Working.py  old_voice_measure_separation.py  playcorderOld.py  power_based_parameter_curve.py  processplay.py  quantization_scheme_check.py  random_stuff.py  saving_to_midi.py  splitting_param_segment_adds.py
misc/old/: combined_midi_player.py  ensemble.py  instruments.py  interval.py  measures_beats_notes.py  musicXML_exporter.py  old_settings.py  recording_to_xml.py  session.py
old/: old_settings.py
planning/: Playcorder plans.txt  SCAMP plans.txt
roadmap/: Roadmap 1.0.txt  Roadmap 2.0.txt  Roadmap.md
roadmap/archive/: Roadmap 1.0.txt  Roadmap 2.0.txt
scamp/: __init__.py  _dependencies.py  _engraving_translations.py  _fluidsynth.py  _metric_layer.py  _metric_structure.py  _midi.py  _note_properties.py  _package_info.py  _parsing.py  _soundfont_host.py  combined_midi_player.py  dependencies.py  engraving_translations.py  ensemble.py  ensemble2.py  instruments.py  instruments2.py  midi_listener.py  note_properties.py  parsing.py  performance.py  performance_note.py  playback_adjustments.py  playback_implementations.py  quantization.py  score.py  session.py  settings.py  simple_rtmidi_wrapper.py  soundfont_host.py  spanners.py  spelling.py  test_run.py  text.py  transcriber.py  utilities.py
scamp/__pyinstaller/: __init__.py
scamp/_thirdparty/: __init__.py  fluidsynth.py  libglib-2.0.0.dylib  libgthread-2.0.0.dylib  libiconv.2.dylib  libintl.8.dylib
scamp/lilypond/: scamp_template.ly
scamp/settings/: engravingSettings.json  playbackSettings.json  quantizationSettings.json
scamp/soundfonts/: Merlin.sf2
scripts/: build_macos_12_wheel.sh  fetch_fluidsynth_libs.py  inject_mac_dylibs.py
scripts/ci/: before_build_linux.sh  before_build_macos.sh  before_build_macos_12.sh  before_build_windows.py
source/: __init__.py  clock.py  combined_midi_player.py  debug.py  dependencies.py  engraving_translations.py  ensemble.py  envelope.py  instruments.py  measures_beats_notes.py  midi_listener.py  musicXML_exporter.py  music_xml.py  note_properties.py  parameter_curve.py  performance.py  performance_note.py  performance_score.py  playback_adjustments.py  playcorder.py  playcorderNew.py  playcorder_utilities.py  quantization.py  recording_to_xml.py  score.py  session.py  settings.py  simple_rtmidi_wrapper.py  spelling.py  utilities.py
source/clockblocks/: README.md  __init__.py  clockblocks.py  tempo_envelope.py
source/pymusicxml/: README.md  __init__.py  music_xml_objects.py  utilities.py
source/settings/: engravingSettings.json  playbackSettings.json  quantizationSettings.json  soundfontSettings.json
src/scamp/: __init__.py  _abjad_facade.py  _dependencies.py  _engraving_translations.py  _midi.py  _soundfont_host.py  abjad_facade.py  instruments.py  note_properties.py  performance.py  playback_adjustments.py  quantization.py  score.py  (+8 more)
test/: test_examples.py
thonny_packaging/: requirements-xxl-bundle.txt
(+139 files in other folders)
