[build-system]
# setuptools>=77 is needed to handle SPDX license expressions in `[project]`,
# and it requires packaging>=24.2 to do so — pin both explicitly because the
# transitive resolution doesn't enforce the latter.
requires = ["setuptools>=77", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scamp"
version = "0.9.5"
description = "A computer-assisted composition framework that manages the flow of musical time, plays back notes via SoundFonts, MIDI or OSC, and quantizes and saves the result to music notation."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"

authors = [
    { name = "Marc Evanstein", email = "marc@marcevanstein.com" }
]

dependencies = [
    "pymusicxml>=0.5.7",
    "expenvelope>=0.7.3",
    "clockblocks>=0.6.10",
    "python-osc",
    "arpeggio",
    "midiutil",
    "numpy"
]

[project.optional-dependencies]
all = [
    "abjad==3.31",
    "python-rtmidi",
    "pynput"
]

[project.urls]
"Source Code" = "https://github.com/MarcTheSpark/scamp"
Documentation = "http://scamp.marcevanstein.com/"
Forum = "http://scampsters.marcevanstein.com/"

[project.entry-points."pyinstaller40"]
hook-dirs = "scamp.__pyinstaller:get_hook_dirs"
tests = "scamp.__pyinstaller:get_PyInstaller_tests"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scamp = [
    "soundfonts/*",
    "lilypond/*",
    "_thirdparty/mac_libs/*",
    "_thirdparty/windows_libs/*",
    "_thirdparty/linux_libs/*"
]

# ---------------------------------------------------------------------------
# cibuildwheel — produces per-platform binary wheels with FluidSynth bundled.
# Reads this section when invoked (e.g. by GitHub Actions in
# .github/workflows/build-wheels.yml). Locally you can also do:
#     pipx run cibuildwheel --platform linux
# to test the linux build on your own machine.
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
# setup.py forces wheels to be tagged ``py3-none-<platform>``, so a single
# wheel built with any CPython >=3.12 works on every CPython >=3.12 of the
# same platform. Build with cp312 only (oldest supported); the resulting
# wheel installs cleanly on cp313, cp314, etc. Building under additional
# Python versions would just produce identically-named wheels that overwrite
# each other.
build = ["cp312-*"]
skip = ["*-musllinux_*", "*_i686", "*-win32"]
build-verbosity = 1
# Don't use cibuildwheel's bundled "pinned" constraints file — it pins
# packaging==24.1, which conflicts with our build-system requirement of
# packaging>=24.2 (needed by setuptools>=77 for SPDX license validation).
dependency-versions = "latest"

# After each wheel is built, run a quick import test to catch obviously-broken
# bundles (e.g. missing transitive dylib). Doesn't actually start audio output.
test-command = "python -c \"import scamp; print(scamp.__version__)\""

[tool.cibuildwheel.linux]
# manylinux_2_34 = AlmaLinux 9 (glibc 2.34). Matches Ubuntu 22.04+ /
# Fedora 35+ / Debian 12+ / RHEL 9+ — every current desktop Linux. We use
# the newer base because EPEL 9 ships fluidsynth 2.3.x compiled with
# PulseAudio/PipeWire/JACK backends, not just ALSA. (Users on older distros
# can either upgrade or `apt install fluidsynth` and rely on the system
# libfluidsynth via try_system_fluidsynth_first.)
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64:latest"
before-build = "bash {project}/scripts/ci/before_build_linux.sh"
# auditwheel repair (run automatically after build) will copy libfluidsynth.so.3
# and its transitive deps into the wheel under scamp/.libs/.

[tool.cibuildwheel.macos]
before-build = "bash {project}/scripts/ci/before_build_macos.sh"
# delocate-wheel runs automatically after build. We deliberately ship per-arch
# wheels (one for arm64, one for x86_64) rather than a universal2 wheel —
# Homebrew installs are arch-specific, so producing a universal wheel from a
# single runner would mean building FluidSynth from source for the other arch.

[tool.cibuildwheel.windows]
# Just download the official prebuilt DLLs; nothing else to do. Windows wheels
# don't get a delocate/auditwheel pass — the DLLs we drop in via package_data
# end up adjacent to the Python files in site-packages.
before-build = "python {project}/scripts/ci/before_build_windows.py"
