[metadata]
name = scamp
description = A computer-assisted composition framework that manages the flow of musical time, plays back notes via SoundFonts, MIDI or OSC, and quantizes and saves the result to music notation.
long_description = file: README.md
long_description_content_type = text/markdown
author = Marc Evanstein
author_email = marc@marcevanstein.com
url = http://scamp.marcevanstein.com
license = GNU GPL Version 3
version = 0.9.2
project_urls =
    Source Code = https://sr.ht/~marcevanstein/scamp/
    Documentation = http://scamp.marcevanstein.com/
    Forum = http://scampsters.marcevanstein.com/
classifier =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
install_requires =
    pymusicxml >= 0.5.6
    expenvelope >= 0.7.2
    clockblocks >= 0.6.9
    python-osc
    arpeggio
    midiutil

# Note: pyfluidsynth and sf2utils are also dependencies, but needed to be tweaked,
# so they have been copied into the _third_party package

[options.extras_require]
all = abjad >= 3.17, <= 3.18; python-rtmidi; pynput

[options.package_data]
scamp =
    soundfonts/*
    lilypond/*
    _thirdparty/mac_libs/*
    _thirdparty/windows_libs/*

[options.entry_points]
pyinstaller40 =
  hook-dirs = scamp.__pyinstaller:get_hook_dirs
  tests     = scamp.__pyinstaller:get_PyInstaller_tests
